--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "latest",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"date-fns": "^2.29.3",
+		"gray-matter": "^4.0.3",
+		"next": "latest",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"remark": "^14.0.2",
+		"remark-html": "^15.0.2"
+	},
+	"devDependencies": {
+		"@types/node": "18.15.5",
+		"@types/react": "18.0.28",
+		"typescript": "5.0.2"
+	}
 }
